--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^1.0",
         "cartalyst/stripe-laravel": "^13.0",
         "coderflexx/laravisit": "^1.0",
         "fideloper/proxy": "^4.4",
